amending the header to reflect the project

--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,15 @@
 <body>
     <div class="container">
         <form action="">
-            <h1>Register</h1>
-            <p>Enter your Gender and DOB to get your Akan Name </p>
+            <h1>AKAN Name generator (Day of Birth)</h1>
+            <p>Enter your Gender and DOB to get your Akan Name from Ghana</p>
             <hr />
             <label for="gender"></label><b>Gender</b></label>
             <select placeholder="gender" name="gender" id="gender" required>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
+            </select>
+            <br/>
                 <label for="dob"><b>Date of Birth YY-MM-DD</b></label>
                 <input type="text" id="dob" name="dob" pattern="\d{2}-\d{2}-\d{2}" placeholder="yy-mm-dd" required>
                 <hr />
