--- a/Index.html
+++ b/Index.html
@@ -53,10 +53,12 @@
 
 
             // Checking the day to allocate the Akan name
+            let akanName = '';
+            //1 is Monday, 2 Tuesday and so on
             if (dayOfWeek === 1 && gender === 'female') {
-                console.log('Your Akan name is Adowa');
+                akanName = 'Adowa';
             } else if (dayOfWeek === 1 && gender === 'male') {
-                console.log('Your Akan name is Kwadwo');
+                akanName = 'Kwadwo';
             } else if (dayOfWeek === 2 && gender === 'female') {
                 console.log('Your Akan name is Abeena');
             } else if (dayOfWeek === 2 && gender === 'male') {
@@ -82,6 +84,10 @@
             } else if (dayOfWeek === 7 && gender === 'male') {
                 console.log('Your Akan name is Kwasi');
 
+            }
+            //Display the Akan name as an alert
+            if (akanName){
+                alert('Your Akan Name is ' + akanName);
             }
         }
 
