amending the script with akanName

--- a/Index.html
+++ b/Index.html
@@ -60,29 +60,29 @@
             } else if (dayOfWeek === 1 && gender === 'male') {
                 akanName = 'Kwadwo';
             } else if (dayOfWeek === 2 && gender === 'female') {
-                console.log('Your Akan name is Abeena');
+                akanName = 'Abeena';
             } else if (dayOfWeek === 2 && gender === 'male') {
-                console.log('Your Akan name is Kwabena');
+                akanName = 'Kwabena';
             } else if (dayOfWeek === 3 && gender === 'female') {
-                console.log('Your Akan name is Akua');
+                akanName = 'Akua';
             } else if (dayOfWeek === 3 && gender === 'male') {
-                console.log('Your Akan name is Kwaku');
+                akanName = 'Kwaku';
             } else if (dayOfWeek === 4 && gender === 'female') {
-                console.log('Your Akan name is Yaa');
+                akanName = 'Yaa';
             } else if (dayOfWeek === 4 && gender === 'male') {
-                console.log('Your Akan name is Yaw');
+                akanName = 'Yaw';
             } else if (dayOfWeek === 5 && gender === 'female') {
-                console.log('Your Akan name is Afua');
+                 akanName = 'Afua';
             } else if (dayOfWeek === 5 && gender === 'male') {
-                console.log('Your Akan name is Kofi');
+                akanName = 'Kofi';
             } else if (dayOfWeek === 6 && gender === 'female') {
-                console.log('Your Akan name is Ama');
+                akanName = 'Ama';
             } else if (dayOfWeek === 6 && gender === 'male') {
-                console.log('Your Akan name is Kwame');
+                akanName = 'Kwame';
             } else if (dayOfWeek === 7 && gender === 'female') {
-                console.log('Your Akan name is Akosua');
+                akanName = 'Akosua';
             } else if (dayOfWeek === 7 && gender === 'male') {
-                console.log('Your Akan name is Kwasi');
+                akanName = 'Kwasi';
 
             }
             //Display the Akan name as an alert
