Amending the name

--- a/Index.html
+++ b/Index.html
@@ -54,35 +54,35 @@
 
             // Checking the day to allocate the Akan name
             let akanName = '';
-            //1 is Monday, 2 Tuesday and so on
-            if (dayOfWeek === 1 && gender === 'female') {
-                akanName = 'Adowa';
-            } else if (dayOfWeek === 1 && gender === 'male') {
-                akanName = 'Kwadwo';
-            } else if (dayOfWeek === 2 && gender === 'female') {
-                akanName = 'Abeena';
-            } else if (dayOfWeek === 2 && gender === 'male') {
-                akanName = 'Kwabena';
-            } else if (dayOfWeek === 3 && gender === 'female') {
-                akanName = 'Akua';
-            } else if (dayOfWeek === 3 && gender === 'male') {
-                akanName = 'Kwaku';
-            } else if (dayOfWeek === 4 && gender === 'female') {
-                akanName = 'Yaa';
-            } else if (dayOfWeek === 4 && gender === 'male') {
-                akanName = 'Yaw';
-            } else if (dayOfWeek === 5 && gender === 'female') {
-                 akanName = 'Afua';
-            } else if (dayOfWeek === 5 && gender === 'male') {
-                akanName = 'Kofi';
-            } else if (dayOfWeek === 6 && gender === 'female') {
+            //0 is Saturday, 1 Sunday, 2 Monday and so on
+            if (dayOfWeek === 0 && gender === 'female') {
                 akanName = 'Ama';
-            } else if (dayOfWeek === 6 && gender === 'male') {
+            } else if (dayOfWeek === 0 && gender === 'male') {
                 akanName = 'Kwame';
-            } else if (dayOfWeek === 7 && gender === 'female') {
+            } else if (dayOfWeek === 1 && gender === 'female') {
                 akanName = 'Akosua';
-            } else if (dayOfWeek === 7 && gender === 'male') {
+            } else if (dayOfWeek === 1 && gender === 'male') {
                 akanName = 'Kwasi';
+            } else if (dayOfWeek === 2 && gender === 'female') {
+                akanName = 'Adowa';
+            } else if (dayOfWeek === 2 && gender === 'male') {
+                akanName = 'Kwado';
+            } else if (dayOfWeek === 3 && gender === 'female') {
+                akanName = 'Abenaa';
+            } else if (dayOfWeek === 3 && gender === 'male') {
+                akanName = 'Kwabena';
+            } else if (dayOfWeek === 4 && gender === 'female') {
+                 akanName = 'Akua';
+            } else if (dayOfWeek === 4 && gender === 'male') {
+                akanName = 'Kwaku';
+            } else if (dayOfWeek === 5 && gender === 'female') {
+                akanName = 'Yaa';
+            } else if (dayOfWeek === 5 && gender === 'male') {
+                akanName = 'Yaw';
+            } else if (dayOfWeek === 6 && gender === 'female') {
+                akanName = 'Afua';
+            } else if (dayOfWeek === 6 && gender === 'male') {
+                akanName = 'Kofi';
 
             }
             //Display the Akan name as an alert
