adjusting the code to include the form id

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <form action="">
+        <form id="akanForm">
             <h1><b>Akan Name generator (Day of Birth)</b></h1>
             <p>Enter your Gender and DOB to get your Akan Name from Ghana</p>
             <hr />
