--- a/Index.html
+++ b/Index.html
@@ -66,7 +66,7 @@
 
             // Checking the day to allocate the Akan name
             let akanName = '';
-            // 0 is Sunday, 1 Monday, 2 Tuesday, and so on
+            //Range 0-6 where 0 is Sunday, 1 Monday, 2 Tuesday, and so on
             switch (dayOfWeek) {
                 case 0:
                     akanName = (gender === 'female') ? 'Akosua' : 'Kwasi';
