--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,8 @@
     <div class="container">
         <form id="akanForm">
             <h1><b>Akan Name generator (Day of Birth)</b></h1>
+            <p>Akan names are derived from Ghanian culture.Children are given their first name corresponding to the day of the week they are born </p>
+            <br> 
             <p>Enter your Gender and DOB to get your Akan Name from Ghana</p>
             <hr />
             <label for="gender"><b>Gender</b></label>
