--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,7 @@
     <div class="container">
         <form id="akanForm">
             <h1><b>Akan Name generator </b></h1>
-            <p>Akan names are derived from Ghanian culture.Children are given their first name corresponding to the day of the week they are born </p>
-            <br> 
+            <p>Akan names are derived from Ghanian culture.Children are given their first name corresponding to the day of the week they are born! </p>
             <p><b>Enter your Gender and DOB to get your Akan Name from Ghana</b></p>
             <hr />
             <label for="gender"><b>Gender</b></label>
